# wallet-app-core

./: Cargo.toml
src/: bid_ask.rs  lib.rs  utils.rs
src/base58/: decode.rs  encode.rs  mod.rs  validator.rs
src/crypto_address_validators/: ada_address_validator.rs  avax_address_validator.rs  btc_address_validator.rs  crypto_address_validator.rs  dot_address_validator.rs  eth_address_validator.rs  hbar_address_validator.rs  icp_address_validator.rs  mod.rs  sol_address_validator.rs  trx_address_validator.rs  xlm_address_validator.rs  xrp_address_validator.rs
src/crypto_deposit_withdraw/: crypto_deposit_withdraw_options.rs  crypto_method.rs  get_deposit_withdraw_name.rs  mod.rs
src/crypto_deposits/: crypto_deposit_options.rs  crypto_deposit_withdraw_options.rs  crypto_withdraw_options.rs  deposit_asset_id.rs  deposit_method.rs  method.rs  mod.rs  utils.rs
src/exchange/: commission_calculator.rs  exchange_calculator.rs  generic_traits.rs  get_asset_pairs.rs  get_trading_conditions.rs  get_trading_group.rs  mod.rs  utils.rs  validate_before_exchange.rs  validator_and_commission_calculator.rs
src/test_mocks/: bid_ask_mock.rs  mod.rs
