[package]
name = "wallet-app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "*"
service-sdk = { tag = "0.3.0", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-nosql-data-reader-sdk",
] }

my-nosql-contracts = { tag = "0.1.0", git = "https://github.com/my-wallet-application/my-nosql-contracts.git" }
