[package]
name = "wallet-app-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
server = ["my-nosql-contracts", "service-sdk"]

[dependencies]
lazy_static = "*"
service-sdk = { tag = "0.4.1", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-nosql-data-reader-sdk",
], optional = true }

my-nosql-contracts = { tag = "0.1.0", git = "https://github.com/my-wallet-application/my-nosql-contracts.git", optional = true }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
